@@ -257,16 +257,16 @@ main(int argc, char *argv[])
    D_RETURN(3, 0);
 }
 
-gboolean
-mainwin_delete_cb(GtkWidget * widget, GdkEvent * event, gpointer user_data)
+gboolean mainwin_delete_cb(GtkWidget * widget, GdkEvent * event,
+                           gpointer user_data)
 {
    D_ENTER(3);
    gtk_exit(0);
    D_RETURN(3, FALSE);
 }
 
-gboolean
-mainwin_destroy_cb(GtkWidget * widget, GdkEvent * event, gpointer user_data)
+gboolean mainwin_destroy_cb(GtkWidget * widget, GdkEvent * event,
+                            gpointer user_data)
 {
    D_ENTER(3);
    gtk_exit(0);
@@ -274,8 +274,9 @@ mainwin_destroy_cb(GtkWidget * widget, GdkEvent * event, gpointer user_data)
 }
 
 
-gboolean configure_cb(GtkWidget * widget, GdkEventConfigure * event,
-                      gpointer user_data)
+gboolean
+configure_cb(GtkWidget * widget, GdkEventConfigure * event,
+             gpointer user_data)
 {
    D_ENTER(3);
 
@@ -284,7 +285,8 @@ gboolean configure_cb(GtkWidget * widget, GdkEventConfigure * event,
    D_RETURN(3, TRUE);
 }
 
-gint evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
+gint
+evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
 {
    geist_object *obj;
 
@@ -380,8 +382,7 @@ gint evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
    D_RETURN(5, 1);
 }
 
-gint
-evbox_buttonrelease_cb(GtkWidget * widget, GdkEventButton * event)
+gint evbox_buttonrelease_cb(GtkWidget * widget, GdkEventButton * event)
 {
    geist_list *list, *l;
    geist_object *obj;
@@ -407,8 +408,7 @@ evbox_buttonrelease_cb(GtkWidget * widget, GdkEventButton * event)
    D_RETURN(5, 1);
 }
 
-gint
-evbox_mousemove_cb(GtkWidget * widget, GdkEventMotion * event)
+gint evbox_mousemove_cb(GtkWidget * widget, GdkEventMotion * event)
 {
    geist_list *l, *list;
    geist_object *obj;
@@ -448,8 +448,7 @@ evbox_mousemove_cb(GtkWidget * widget, GdkEventMotion * event)
    D_RETURN(5, 1);
 }
 
-gboolean
-obj_load_cb(GtkWidget * widget, gpointer data)
+gboolean obj_load_cb(GtkWidget * widget, gpointer data)
 {
    geist_object *obj = NULL;
    char *path;
@@ -474,15 +473,13 @@ obj_load_cb(GtkWidget * widget, gpointer data)
    D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_load_cancel_cb(GtkWidget * widget, gpointer data)
+gboolean obj_load_cancel_cb(GtkWidget * widget, gpointer data)
 {
    gtk_widget_destroy((GtkWidget *) data);
    return TRUE;
 }
 
-gboolean
-obj_add_cb(GtkWidget * widget, gpointer * data)
+gboolean obj_add_cb(GtkWidget * widget, gpointer * data)
 {
    GtkWidget *file_sel = gtk_file_selection_new("Add an Image");
 
@@ -497,16 +494,44 @@ obj_add_cb(GtkWidget * widget, gpointer * data)
    return TRUE;
 }
 
-gboolean
-obj_cpy_cb(GtkWidget * widget, gpointer * data)
+gboolean obj_cpy_cb(GtkWidget * widget, gpointer * data)
 {
+   geist_object *new;
+   geist_list *l, *list;
+   geist_object *obj;
+   int row;
 
-   fprintf(stderr, "cpy object\n");
-   return TRUE;
+   D_ENTER(3);
+
+   list = geist_document_get_selected_list(doc);
+   for (l = list; l; l = l->next)
+   {
+      obj = GEIST_OBJECT(l->data);
+      new = geist_object_duplicate(obj);
+      if (new)
+      {
+         new->x += 5;
+         new->y += 5;
+         geist_document_add_object(doc, new);
+
+         row =
+            gtk_clist_find_row_from_data(GTK_CLIST(obj_list), (gpointer) obj);
+         if (row != -1)
+            gtk_clist_unselect_row(GTK_CLIST(obj_list), row, 0);
+
+         row =
+            gtk_clist_find_row_from_data(GTK_CLIST(obj_list), (gpointer) new);
+         if (row != -1)
+            gtk_clist_select_row(GTK_CLIST(obj_list), row, 0);
+      }
+   }
+   geist_list_free(list);
+   geist_document_render_updates(doc);
+
+   D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_del_cb(GtkWidget * widget, gpointer * data)
+gboolean obj_del_cb(GtkWidget * widget, gpointer * data)
 {
    geist_object *obj;
    geist_list *l, *list;
@@ -529,18 +554,20 @@ obj_del_cb(GtkWidget * widget, gpointer * data)
    D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_vis_cb(GtkWidget * widget, gpointer * data)
+gboolean obj_vis_cb(GtkWidget * widget, gpointer * data)
 {
    geist_object *obj;
-   GtkCListRow *row;
-   GList *list;
+   geist_list *list;
 
    D_ENTER(3);
 
-   list = GTK_CLIST(obj_list)->selection;
-   row = list->data;
-   obj = (geist_object *) row->data;
+   list = geist_document_get_selected_list(doc);
+   if (!list)
+      D_RETURN(3, TRUE);
+
+   /* TODO Work for multiple selections */
+   obj = (geist_object *) list->data;
+   geist_list_free(list);
 
    if (obj)
    {
@@ -554,18 +581,21 @@ obj_vis_cb(GtkWidget * widget, gpointer * data)
    D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_text_cb(GtkWidget * widget, gpointer * data)
+gboolean obj_text_cb(GtkWidget * widget, gpointer * data)
 {
    geist_object *obj;
-   GtkCListRow *row;
-   GList *list;
+   geist_list *list;
 
    D_ENTER(3);
 
-   list = GTK_CLIST(obj_list)->selection;
-   row = list->data;
-   obj = (geist_object *) row->data;
+   list = geist_document_get_selected_list(doc);
+   if (!list)
+      D_RETURN(3, TRUE);
+
+   /* TODO Work for multiple selections */
+   obj = (geist_object *) list->data;
+
+   geist_list_free(list);
 
    if (obj)
    {
@@ -580,29 +610,36 @@ obj_text_cb(GtkWidget * widget, gpointer * data)
    D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_name_cb(GtkWidget * widget, gpointer * data)
+gboolean obj_name_cb(GtkWidget * widget, gpointer * data)
 {
    geist_object *obj;
-   GtkCListRow *row;
-   GList *list;
+   geist_list *list;
 
    D_ENTER(3);
 
-   list = GTK_CLIST(obj_list)->selection;
-   row = list->data;
-   obj = (geist_object *) row->data;
+   list = geist_document_get_selected_list(doc);
+   if (!list)
+      D_RETURN(3, TRUE);
 
-   gtk_clist_set_text(GTK_CLIST(obj_list),
-                      gtk_clist_find_row_from_data(GTK_CLIST(obj_list), obj),
-                      0, gtk_entry_get_text(GTK_ENTRY(widget)));
-   obj->name = estrdup(gtk_entry_get_text(GTK_ENTRY(widget)));
+   /* TODO Work for multiple selections */
+   obj = (geist_object *) list->data;
+
+   geist_list_free(list);
+
+   if (obj)
+   {
+
+      gtk_clist_set_text(GTK_CLIST(obj_list),
+                         gtk_clist_find_row_from_data(GTK_CLIST(obj_list),
+                                                      obj), 0,
+                         gtk_entry_get_text(GTK_ENTRY(widget)));
+      obj->name = estrdup(gtk_entry_get_text(GTK_ENTRY(widget)));
+   }
    D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_sel_cb(GtkWidget * widget, int row, int column, GdkEventButton * event,
-           gpointer * data)
+gboolean obj_sel_cb(GtkWidget * widget, int row, int column,
+                    GdkEventButton * event, gpointer * data)
 {
    GList *selection;
    geist_object *obj;
@@ -655,9 +692,8 @@ obj_sel_cb(GtkWidget * widget, int row, int column, GdkEventButton * event,
    D_RETURN(3, TRUE);
 }
 
-gboolean
-obj_unsel_cb(GtkWidget * widget, int row, int column, GdkEventButton * event,
-             gpointer * data)
+gboolean obj_unsel_cb(GtkWidget * widget, int row, int column,
+                      GdkEventButton * event, gpointer * data)
 {
    GList *selection;
    geist_object *obj;
