@@ -1,3 +1,9 @@
+Sat Aug  5 19:15:08 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Copy works, and handles multiple selections too.
+	* Fixed coredump when typing stuff in the text boxes ;) (My bad).
+	* Fixed some other stuffs... Urm...
+
 Sat Aug  5 16:37:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Check if object is visible when seeing if it's been clicked.
